objects/FSL_MakeModel_Stage__c.object
<CustomObject>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelSeries__c</fullName>
        <label>ModelSeries</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PSN__c</fullName>
        <label>PSN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductApplicationCode__c</fullName>
        <label>ProductApplicationCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_PSN__c</fullName>
        <externalId>true</externalId>
        <label>Type-PSN</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Engines</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <label>VIN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>FSL MakeModel Stage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>FSL MakeModel Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FSL MakeModel Stages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>